# rulecraft

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  nightly-evolve.yml
docs/: ARCHITECTURE.md  RC_Addendum_rev17.md  RC_ContextBlock_Spec_r02.md  RC_Contracts_SSOT_ssot10.md  RC_GLOSSARY_v01.md  RC_Playbook_r17.md  RC_Validator_r08.md
examples/: minimal_batch_run.py  minimal_contract_batch_run.py  minimal_contract_dump.py  minimal_openai_runner.py  minimal_rule_select.py  minimal_run.py  minimal_runner.py
examples/policies/: sample_policy_profile.json
examples/tasks/: contract_tasks.jsonl  evolve_smoke_tasks.jsonl  sample_tasks.jsonl
rules/: sample_rulebook.json
scripts/: check_legacy_terms.py
src/rulecraft/: __init__.py  cli.py  contracts.py  ids.py  orchestrator.py
src/rulecraft/adapters/: __init__.py  base.py  dummy.py  openai_adapter.py  openai_cost.py  retry.py  scripted.py  stub.py  tape.py
src/rulecraft/analysis/: __init__.py  counterexamples.py  diff_runs.py  flowmap.py  regpack.py  trace_view.py
src/rulecraft/contracts/: __init__.py  normalize.py  ssot.py  types.py
src/rulecraft/logging/: __init__.py  jsonl.py  jsonl_logger.py
tests/: test_budget_router.py  test_cleanup.py  test_cli.py  test_contracts.py  test_counterexamples.py  test_diff_runs.py  test_eventlog_normalize.py  test_evolve_smoke.py  test_evolve_with_tape.py  test_failure_clusters.py  test_flowmap.py  test_l3_jsonschema.py  test_metrics.py  test_orchestrator.py  test_pacore_lite.py  test_policy_profile.py  test_promote_gate.py  test_promote_rules_gate.py  test_regpack.py  test_repair_loop.py  test_replay_determinism.py  test_retry_policy.py  test_rollout_rank.py  test_rule_lint.py  test_rule_prune.py  test_rule_suggest.py  test_rulebook.py  test_run_batch.py  test_should_scale.py  test_smoke.py  test_suggest_policy.py  test_tape_adapter.py  test_task_metrics.py  test_trace_view.py  test_verifier_cache.py  test_verify_output.py
(+36 files in other folders)
