[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rulecraft"
version = "0.1.0"
description = "Rulecraft core runtime contracts and logging kernel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

license = {text = "MIT"}
keywords = ["llm", "agent", "middleware", "validation", "logging", "rulebook"]

[project.urls]
Repository = "<https://github.com/Aurna-code/rulecraft>"
Issues = "<https://github.com/Aurna-code/rulecraft/issues>"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
